--- a/projects/SPlayer/Win/winres.rc
+++ b/projects/SPlayer/Win/winres.rc
@@ -2,4 +2,5 @@
 #include "winres.h"
 
 IDB_BITMAPCAELOGO        BITMAP                  "../Resources/caelogo.bmp"
+IDB_BITMAPCAEBG        RCDATA                  "../Resources/bg.bmp"
 
