Build fixes, new functions (screenshot and probe), and a lot of other changes.

--- a/libffmpeg/Makefile
+++ b/libffmpeg/Makefile
@@ -4,9 +4,19 @@ LD=gcc
 ifeq ("${TERM}", "cygwin")
 CFLAGS = -g -I. -I../FFmpeg -DCONFIG_FASTMEMCPY=1
 LDFLAGS = 
+configurestr = --disable-doc --disable-ffmpeg --disable-ffprobe --disable-ffserver --disable-dxva2 --enable-runtime-cpudetect --disable-muxers --disable-bsfs --enable-openssl --disable-static --enable-shared --enable-pthreads ; \
+DEBUGVIEW=debugview.exe
 else
+ifeq ("${FFMPEGMAC}", "32")
 CFLAGS = -g -I. -I../FFmpeg -DCONFIG_FASTMEMCPY=1 -arch i386
 LDFLAGS = -arch i386 -read_only_relocs suppress
+configurestr = --disable-asm --disable-doc --disable-ffmpeg --disable-ffprobe --disable-ffserver --disable-dxva2 --enable-runtime-cpudetect --disable-muxers --disable-bsfs --enable-openssl --extra-cflags="-arch i386" --extra-ldflags='-arch i386 -read_only_relocs suppress' --arch=i386 --cpu=i386--target-os=darwin --enable-cross-compile --disable-static --enable-shared
+else
+CFLAGS = -g -I. -I../FFmpeg -DCONFIG_FASTMEMCPY=1
+LDFLAGS = 
+configurestr = --disable-asm --disable-doc --disable-ffmpeg --disable-ffprobe --disable-ffserver --disable-dxva2 --enable-runtime-cpudetect --disable-muxers --disable-bsfs --enable-openssl --target-os=darwin --disable-static --enable-shared
+endif
+DEBUGVIEW=debugview
 endif
 
 FFCFLAGS = -I../FFmpeg -Wformat-extra-args -Wformat $(shell sdl-config --cflags)
@@ -16,7 +26,7 @@ TARGETS =
 CONFIGURATION=configuration
 FFMPEGDIR=../FFmpeg/
 DYNAMICLIBSMAC= lib/libavformat.dylib lib/libavfilter.dylib lib/libavcodec.dylib lib/libswscale.dylib lib/libavutil.dylib lib/libswresample.dylib
-DYNAMICLIBSWIN= lib/avformat.dll lib/avfilter.dll lib/avcodec.dll lib/swscale.dll lib/avutil.dll lib/swresample.dll
+DYNAMICLIBSWIN= lib/avformat-54.dll lib/avfilter-3.dll lib/avcodec-54.dll lib/swscale-2.dll lib/avutil-51.dll lib/swresample-0.dll
 FFLIBSMAC=lib/libavdevice.dylib
 FFLIBSWIN=lib/libavdevice.dll
 OBJECTS = $(addsuffix .o, $(TARGETS)) 
@@ -26,7 +36,7 @@ OBJS = aclib.o fmt-conversion.o libxplayer.o $(AFILTER) eventqueue.o libffplayop
 OBJFF=cmdutils.o
 OBJSHM=libshmem/libshmem.o
 
-ALL = libxplayer.a debugview done
+ALL = libxplayer.a $(DEBUGVIEW) done
 
 ifeq ("${TERM}", "cygwin")
 all:	$(DYNAMICLIBSWIN) $(ALL)
@@ -50,16 +60,29 @@ $(OBJS):	%.o:%.c $(DYNAMICLIBSMAC) config.h libffplay.h debug.h
 	$(CC) $(CFLAGS) -c $< -o $@
 endif
 
-debugview:	debugview.o debug.o
+$(DEBUGVIEW):	debugview.o debug.o
 	$(LD) $< $(LDFLAGS) $(CFLAGS) $($@_OBJ) -o $@ debug.o
 
-done:
 ifeq ("${TERM}", "cygwin")
+done:
 	@echo 'Windows detected, converting libraries...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
 	$$opwd/objconv.exe -fcoff $$opwd/libxplayer.a $$opwd/libxplayer.lib > /dev/null
 	@echo 'Build done.'
+else
+done:
+	@for f in lib/*.dylib ; do \
+	echo Processing $$f file.. ; \
+	install_name_tool -change /usr/local/lib/libavcodec.54.dylib @loader_path/libavcodec.54.dylib $$f ; \
+	install_name_tool -change /usr/local/lib/libavdevice.54.dylib @loader_path/libavdevice.54.dylib $$f ; \
+	install_name_tool -change /usr/local/lib/libavfilter.3.dylib @loader_path/libavfilter.3.dylib $$f ; \
+	install_name_tool -change /usr/local/lib/libavformat.54.dylib @loader_path/libavformat.54.dylib $$f ; \
+	install_name_tool -change /usr/local/lib/libavutil.51.dylib @loader_path/libavutil.51.dylib $$f ; \
+	install_name_tool -change /usr/local/lib/libswresample.0.dylib @loader_path/libswresample.0.dylib $$f ; \
+	install_name_tool -change /usr/local/lib/libswscale.2.dylib @loader_path/libswscale.2.dylib $$f ; \
+	install_name_tool -id $$f $$f ; \
+	done
 endif
 
 libxplayer.so.0.0: $(OBJS) $(DYNAMICLIBS)
@@ -70,125 +93,116 @@ libxplayer.so.0.0: $(OBJS) $(DYNAMICLIBS)
 libxplayer.a: $(OBJS)
 	$(AR) -r libxplayer.a $(OBJS)
 
-ifeq ("${TERM}", "cygwin")
 configuration:
 	@echo 'Configuring ffmpeg...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	./configure --disable-doc --disable-ffmpeg --disable-ffprobe --disable-ffserver --disable-dxva2 --enable-runtime-cpudetect --disable-muxers --disable-bsfs --enable-openssl --disable-static --enable-shared --enable-pthreads ; \
-	cd "$$opwd"
-else
-configuration:
-	@echo 'Configuring ffmpeg...' ; \
-	opwd=`pwd` ; \
-	cd "$(FFMPEGDIR)" ; \
-	./configure --disable-doc --disable-ffmpeg --disable-ffprobe --disable-ffserver --disable-dxva2 --enable-runtime-cpudetect --disable-muxers --disable-bsfs --enable-openssl --extra-cflags="-arch i386" --extra-ldflags='-arch i386 -read_only_relocs suppress' --arch=i386 --cpu=i386 --target-os=darwin --enable-cross-compile --disable-static --enable-shared ; \
-	cd "$$opwd"
-endif
-
-lib/libswscale.dylib: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
-	opwd=`pwd` ; \
-	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	./configure $(configurestr) ; \
 	cd "$$opwd"
 
-lib/libavcodec.dylib: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/libswscale.dylib: build-to-libffmpeg.sh
+	@echo 'Build libswscale...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/libavfilter.dylib: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/libavcodec.dylib: build-to-libffmpeg.sh
+	@echo 'Build libavcodec...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/libavutil.dylib: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/libavfilter.dylib: build-to-libffmpeg.sh
+	@echo 'Build libavfilter...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/libavformat.dylib: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/libavutil.dylib: build-to-libffmpeg.sh
+	@echo 'Build libavutil...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/libswresample.dylib: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/libavformat.dylib: build-to-libffmpeg.sh
+	@echo 'Build libavformat...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/libavdevice.dylib: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/libswresample.dylib: build-to-libffmpeg.sh
+	@echo 'Build libswresample...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/swscale.dll: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/libavdevice.dylib: build-to-libffmpeg.sh
+	@echo 'Build libavdevice...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/avcodec.dll: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/swscale-2.dll: build-to-libffmpeg.sh
+	@echo 'Build libswscale...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/avfilter.dll: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/avcodec-54.dll: build-to-libffmpeg.sh
+	@echo 'Build libavcodec...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/avutil.dll: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/avfilter-3.dll: build-to-libffmpeg.sh
+	@echo 'Build libavfilter...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/avformat.dll: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/avutil-51.dll: build-to-libffmpeg.sh
+	@echo 'Build libavutil...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/swresample.dll: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/avformat-54.dll: build-to-libffmpeg.sh
+	@echo 'Build libavformat...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-lib/avdevice.dll: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/swresample-0.dll: build-to-libffmpeg.sh
+	@echo 'Build libswresample...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
-ffmpeg_config.h: build-to-splugin.sh
-	@echo 'Build ffmpeg...' ; \
+lib/avdevice-54.dll: build-to-libffmpeg.sh
+	@echo 'Build libavdevice...' ; \
 	opwd=`pwd` ; \
 	cd "$(FFMPEGDIR)" ; \
-	$$opwd/build-to-splugin.sh "$$opwd" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
+	cd "$$opwd"
+
+ffmpeg_config.h: build-to-libffmpeg.sh
+	@echo 'Build ffmpeg_config...' ; \
+	opwd=`pwd` ; \
+	cd "$(FFMPEGDIR)" ; \
+	$$opwd/build-to-libffmpeg.sh "$$opwd" ; \
 	cd "$$opwd"
 
 config.h: configure
